# FAMP

./: .gitignore  CHANGELOG.md  CMakeLists.txt  DEVELOPMENT_STATUS.md  README.md  vcpkg.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
ci/vcpkg-overlay-ports/: README.md
ci/vcpkg-overlay-ports/libaec/: portfile.cmake
cmake/: FampVcpkg.cmake  FampVersion.cmake
docs/architecture/: SOURCE_LAYOUT.md
docs/qa/: V0_2_0_PLUS_ACCEPTANCE.md
resources/: famp.desktop  res.qrc
resources/images/icon/: famp_icon.rc
samples/: 1.las  ordercloud.pcd  projectPointCloud.pcd  大墓坑_对齐_sampling_25000.pcd
scripts/: bootstrap-vcpkg.ps1  bootstrap-vcpkg.sh
src/: AdditionalCloudLoader.cpp  ArchaeologyMetadata.h  ArchaeologyMetadataDialog.cpp  ArchaeologyMetadataDialog.h  ArchaeologyReport.cpp  ArchaeologyReport.h  CMakeLists.txt  Cloud.cpp  Cloud.h  CloudAttributes.cpp  CloudAttributes.h  CloudCoordinates.cpp  CloudCoordinates.h  CloudCrop.cpp  CloudCrop.h  CloudDisplaySettings.cpp  CloudDisplaySettings.h  CloudLayer.cpp  CloudLayer.h  CloudLoader.cpp  CloudLoader.h  CloudProcessing.cpp  CloudProcessing.h  CloudRegistration.cpp  CloudRegistration.h  CloudReprojection.cpp  CompassItem.cpp  CompassItem.h  ContourItem.h  ControlPointDialog.h  ControlPoints.h  CrsService.cpp  CrsService.h  CutFillAnalysis.h  CutFillDialog.cpp  CutFillDialog.h  CutFillIO.h  FAMPController.cpp  FAMPController.h  FileIO.cpp  (+56 more)
src/app/: main.cpp
src/application/processing/: CloudCrop.cpp  CloudCrop.h  CloudProcessing.cpp  CloudProcessing.h  CloudProjection.cpp  CloudProjection.h  CloudRegistration.cpp  CloudRegistration.h  CloudReprojection.h
src/application/workspace/: EntityWriterRegistry.cpp  EntityWriterRegistry.h  RendererRegistry.cpp  RendererRegistry.h  WorkspaceEntity.cpp  WorkspaceEntity.h  WorkspaceSnapshot.cpp  WorkspaceSnapshot.h  WorkspaceStore.cpp  WorkspaceStore.h
src/core/tasks/: TaskManager.h
src/domain/analysis/cutfill/: CutFillAnalysis.cpp
src/domain/analysis/profile/: ProfileAnalysis.cpp  ProfileAnalysis.h
src/domain/archaeology/: ArchaeologyMetadata.cpp  ControlPoints.cpp
src/domain/cloud/: Cloud.cpp  Cloud.h  CloudAttributes.cpp  CloudAttributes.h  CloudCoordinates.h  CloudDisplaySettings.cpp  CloudDisplaySettings.h  CloudLayer.cpp  CloudLayer.h
src/domain/measurement/: Measurement.h
src/infrastructure/cloud_io/: AdditionalCloudLoader.h  LasLoader.cpp
src/infrastructure/filesystem/: FileIO.cpp  FileIO.h  RecentFiles.cpp  RecentFiles.h
src/infrastructure/geospatial/: CrsService.h
src/infrastructure/persistence/: CutFillIO.cpp  ProfileIO.h  ProjectDocument.cpp  ProjectDocument.h  TerrainIO.h
src/infrastructure/reporting/: ArchaeologyReport.cpp  ArchaeologyReport.h
src/presentation/canvas2d/: CompassItem.cpp  CompassItem.h  ContourItem.cpp  FormTabulationItem.cpp  FormTabulationItem.h  GraphicsExport.cpp  GraphicsExport.h  GraphicsItemTransform.cpp  GraphicsSceneDocument.cpp  GraphicsSceneDocument.h  GraphicsUndoCommands.cpp  GraphicsUndoCommands.h  MeasurementItem.cpp  MeasurementItem.h  MyGraphicsView.cpp  MyGraphicsView.h  MyItem.cpp  MyItem.h
src/presentation/common/: HelpContent.h  MetricGrid.cpp  MetricGrid.h  MetricScale.h
src/presentation/dialogs/: ControlPointDialog.cpp  CutFillDialog.cpp  CutFillDialog.h  ProfileDialog.cpp  ProfileDialog.h  QDlgClip.cpp  QDlgClip.h  TerrainDialog.cpp  TerrainDialog.h
src/presentation/entity_tree/: EntityTreeModel.cpp  EntityTreeModel.h
src/presentation/shell/: FAMPController.cpp  FAMPController.h  MainWindow.cpp  MainWindow.h
src/presentation/viewport3d/: MyVTK.cpp  MyVTK.h  PlaneWidgetPlacement.cpp  PlaneWidgetPlacement.h  VTKPointCloudManager.cpp  VTKPointCloudManager.h  VTKProjectionManager.cpp  VTKProjectionManager.h  VTKRenderManager.cpp  VTKRenderManager.h
tests/: CMakeLists.txt  test_additional_cloud_loader.cpp  test_archaeology_metadata.cpp  test_archaeology_report.cpp  test_clip_dialog.cpp  test_cloud.cpp  test_cloud_attributes.cpp  test_cloud_coordinates.cpp  test_cloud_crop.cpp  test_cloud_display_settings.cpp  test_cloud_layer.cpp  test_cloud_loader.cpp  test_cloud_processing.cpp  test_cloud_projection.cpp  test_cloud_registration.cpp  test_cloud_reprojection.cpp  test_contour_item.cpp  test_control_point_dialog.cpp  test_control_points.cpp  test_crs_service.cpp  test_cut_fill_analysis.cpp  test_cut_fill_dialog.cpp  test_cut_fill_io.cpp  test_cut_fill_workflow.cpp  test_entity_tree_model.cpp  test_file_io.cpp  test_graphics_export.cpp  test_graphics_item_transform.cpp  test_graphics_scene_document.cpp  test_graphics_undo_commands.cpp  test_help_content.cpp  test_las_loader.cpp  test_main.cpp  test_main_window_layout.cpp  test_measurement.cpp  test_metric_scale.cpp  test_pcd_loader.cpp  test_plane_clip_commit.cpp  test_plane_widget_placement.cpp  test_processing_recipe.cpp  (+16 more)
triplets/: x64-win-rel.cmake
ui/: MainWindow.ui  QDlgClip.ui  QDlgPlotTab.ui
